Сделана основная разметка всего макета

--- a/index.html
+++ b/index.html
@@ -8,5 +8,109 @@
 </head>
 <body>
     
+    <header>
+        <h3>
+            <a href="">WebStudio</a>
+        </h3>
+       
+        <nav>
+            <ul>
+                <li>Студия</li>
+                <li>Портфолио</li>
+                <li>Контакты</li>
+            </ul>
+        </nav>
+        <ul>
+            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </header>
+    <main>
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
+        <section>
+            <ul>
+                <li>
+                    <h4>Внимание к деталям</h4>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h4>Пунктуальность</h4>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h4>Планирование</h4>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h4>Современные технологии</h4>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li>
+                    <img src="./images/box1ofsec3.jpg" alt="website development">
+                </li>
+                <li>
+                    <img src="./images/box2ofsec3.jpg" alt="web design creation">
+                </li>
+                <li>
+                    <img src="./images/box4ofsec3.jpg" alt="developer tools">
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/igordemianenko.jpg" alt="member of the team">              
+                    <p>
+                        <b>Игорь Демьяненко</b>
+                    </p>
+                    <p>Product Designer</p> 
+                </li>
+                <li>
+                    <img src="./images/olgarepina.jpg" alt="member of the team">               
+                    <p>
+                    <b>Ольга Репина</b>
+                    </p>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/nikolaytarasov.jpg" alt="member of the team">
+                    <p>
+                        <b>Николай Тарасов</b>
+                    </p>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/mikhailermakov.jpg" alt="member of the team">               
+                    <p>
+                    <b>Михаил Ермаков</b>
+                    </p>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <h3>WebStudio</h3>
+            <ul>
+                <li>
+                    <address>г. Киев, пр-т Леси Украинки, 26</address>
+                </li>
+                <li> 
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+    </footer>
 </body>
 </html>
