Добавлены пропорции фото членов команды

--- a/index.html
+++ b/index.html
@@ -68,28 +68,28 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/igordemianenko.jpg" alt="member of the team">              
+                    <img src="./images/igordemianenko.jpg" alt="member of the team" height="420">              
                     <p>
                         <b>Игорь Демьяненко</b>
                     </p>
                     <p>Product Designer</p> 
                 </li>
                 <li>
-                    <img src="./images/olgarepina.jpg" alt="member of the team">               
+                    <img src="./images/olgarepina.jpg" alt="member of the team" height="400">         
                     <p>
-                    <b>Ольга Репина</b>
+                        <b>Ольга Репина</b>
                     </p>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/nikolaytarasov.jpg" alt="member of the team">
+                    <img src="./images/nikolaytarasov.jpg" alt="member of the team" height="420">
                     <p>
                         <b>Николай Тарасов</b>
                     </p>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/mikhailermakov.jpg" alt="member of the team">               
+                    <img src="./images/mikhailermakov.jpg" alt="member of the team" width="420">               
                     <p>
                     <b>Михаил Ермаков</b>
                     </p>
