--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
     <header>
         <h3>
-            <a href="">WebStudio</a>
+            <a href="#">WebStudio</a>
         </h3>
-       
         <nav>
             <ul>
-                <li>Студия</li>
-                <li>Портфолио</li>
-                <li>Контакты</li>
+                <li> <a href="#"></a>Студия</li>
+                <li> <a href="#"></a>Портфолио</li>
+                <li> <a href="#"></a>Контакты</li>
             </ul>
         </nav>
         <ul>
@@ -25,11 +23,16 @@
             <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
+    <!-- Main content -->
     <main>
+        <!-- Hero -->
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
+        <!-- /Hero -->
+
+        <!-- About features section -->
         <section>
             <ul>
                 <li>
@@ -50,46 +53,52 @@
                 </li>
             </ul>
         </section>
+        <!-- /About features section -->
+
+        <!-- About services section -->
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="./images/box1ofsec3.jpg" alt="website development">
+                    <img src="./images/box1.jpg" alt="website development">
                 </li>
                 <li>
-                    <img src="./images/box2ofsec3.jpg" alt="web design creation">
+                    <img src="./images/box2.jpg" alt="web design creation">
                 </li>
                 <li>
-                    <img src="./images/box4ofsec3.jpg" alt="developer tools">
+                    <img src="./images/box4.jpg" alt="developer tools">
                 </li>
             </ul>
         </section>
+        <!-- /About services section -->
+
+        <!-- About team section -->
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/igordemianenko.jpg" alt="member of the team" height="420">              
+                    <img src="./images/pdesigner.jpg" alt="member of the team" height="420">              
                     <p>
                         <b>Игорь Демьяненко</b>
                     </p>
                     <p>Product Designer</p> 
                 </li>
                 <li>
-                    <img src="./images/olgarepina.jpg" alt="member of the team" height="400">         
+                    <img src="./images/fdeveloper.jpg" alt="member of the team" height="400">         
                     <p>
                         <b>Ольга Репина</b>
                     </p>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/nikolaytarasov.jpg" alt="member of the team" height="420">
+                    <img src="./images/marketing.jpg" alt="member of the team" height="420">
                     <p>
                         <b>Николай Тарасов</b>
                     </p>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/mikhailermakov.jpg" alt="member of the team" width="420">               
+                    <img src="./images/uldesigner.jpg" alt="member of the team" width="340">               
                     <p>
                     <b>Михаил Ермаков</b>
                     </p>
@@ -97,7 +106,10 @@
                 </li>
             </ul>
         </section>
+        <!-- /About team section -->
     </main>
+    <!-- /Main content -->
+
     <footer>
         <h3>WebStudio</h3>
             <ul>
