--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
     <!-- /Main content -->
 
     <footer>
-        <h3>WebStudio</h3>
+        <h3>
+            <a href="#">WebStudio</a>
+        </h3>
             <ul>
                 <li>
                     <address>г. Киев, пр-т Леси Украинки, 26</address>
