--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </h3>
         <nav>
             <ul>
-                <li> <a href="#"></a>Студия</li>
-                <li> <a href="#"></a>Портфолио</li>
-                <li> <a href="#"></a>Контакты</li>
+                <li> <a href="#">Студия</a></li>
+                <li> <a href="#">Портфолио</a></li>
+                <li> <a href="#">Контакты</a></li>
             </ul>
         </nav>
         <ul>
