--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <header>
-        <h3>
             <a href="#">WebStudio</a>
-        </h3>
         <nav>
             <ul>
                 <li> <a href="#">Студия</a></li>
@@ -36,19 +34,19 @@
         <section>
             <ul>
                 <li>
-                    <h4>Внимание к деталям</h4>
+                    <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h4>Пунктуальность</h4>
+                    <h3>Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h4>Планирование</h4>
+                    <h3>Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h4>Современные технологии</h4>
+                    <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
@@ -60,13 +58,13 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="./images/box1.jpg" alt="website development">
+                    <img src="./images/box1.jpg" alt="website development" height="294" width="370">
                 </li>
                 <li>
-                    <img src="./images/box2.jpg" alt="web design creation">
+                    <img src="./images/box2.jpg" alt="web design creation" height="294" width="370">
                 </li>
                 <li>
-                    <img src="./images/box4.jpg" alt="developer tools">
+                    <img src="./images/box3.jpg" alt="developer tools" height="294" width="370">
                 </li>
             </ul>
         </section>
@@ -77,31 +75,23 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/pdesigner.jpg" alt="member of the team" height="420">              
-                    <p>
-                        <b>Игорь Демьяненко</b>
-                    </p>
+                    <img src="./images/pdesigner.jpg" alt="member of the team" height="260" width="270">
+                    <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p> 
                 </li>
                 <li>
-                    <img src="./images/fdeveloper.jpg" alt="member of the team" height="400">         
-                    <p>
-                        <b>Ольга Репина</b>
-                    </p>
+                    <img src="./images/fdeveloper.jpg" alt="member of the team" height="260" width="270">
+                    <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/marketing.jpg" alt="member of the team" height="420">
-                    <p>
-                        <b>Николай Тарасов</b>
-                    </p>
+                    <img src="./images/marketing.jpg" alt="member of the team" height="260" width="270">
+                    <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/uldesigner.jpg" alt="member of the team" width="340">               
-                    <p>
-                    <b>Михаил Ермаков</b>
-                    </p>
+                    <img src="./images/uldesigner.jpg" alt="member of the team" height="260" width="270">
+                    <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -111,20 +101,18 @@
     <!-- /Main content -->
 
     <footer>
-        <h3>
             <a href="#">WebStudio</a>
-        </h3>
-            <ul>
-                <li>
-                    <address>г. Киев, пр-т Леси Украинки, 26</address>
-                </li>
-                <li> 
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-            </ul>
+            <address>
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
+                <ul>
+                    <li> 
+                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
     </footer>
 </body>
 </html>
